Dynamic web page to see CI Votes in DLRN API
We want to have a dynamic web page to check the CI Votes for a
specific API instance. We implement that via two new API endpoints:

- /api/civotes.html, which provides an overview
- /api/civotes_detail.hml, which allows us to filter on a
commit hash+distro hash combination, and see successful/failed jobs
for a repo.
