# dlrn/api/dlrn_api.py
@@ -17,14 +17,17 @@ from distutils.util import strtobool
 from dlrn.api import app
 from dlrn.api.utils import auth
 from dlrn.api.utils import InvalidUsage
+from dlrn.api.utils import RepoDetail
 
 from dlrn.db import CIVote
 from dlrn.db import Commit
+from dlrn.db import getCommits
 from dlrn.db import getSession
 
 from dlrn.remote import import_commit
 
 from flask import jsonify
+from flask import render_template
 from flask import request
 
 import os
@@ -391,3 +394,83 @@ def remote_import():
 
     result = {'repo_url': repo_url}
     return jsonify(result), 201
+
+
+@app.template_filter()
+def strftime(date, fmt="%Y-%m-%d %H:%M:%S"):
+    gmdate = time.gmtime(date)
+    return "%s" % time.strftime(fmt, gmdate)
+
+
+@app.route('/api/civotes.html', methods=['GET'])
+def get_civotes():
+    session = getSession(app.config['DB_PATH'])
+    votes = session.query(CIVote)
+    votes = votes.filter(CIVote.ci_name != 'consistent')
+
+    # Let's find all individual commit_hash + distro_hash combinations
+    commit_id_list = []
+    for vote in votes:
+        if vote.commit_id not in commit_id_list:
+            commit_id_list.append(vote.commit_id)
+
+    # Populate list for commits
+    repolist = []
+    for commit_id in commit_id_list:
+        commit = getCommits(session, limit=0).filter(
+            Commit.id == commit_id).first()
+
+        repodetail = RepoDetail()
+        repodetail.commit_hash = commit.commit_hash
+        repodetail.distro_hash = commit.distro_hash
+        repodetail.distro_hash_short = commit.distro_hash[:8]
+        repodetail.success = votes.filter(CIVote.commit_id == commit_id,
+                                          CIVote.ci_vote == 1).count()
+        repodetail.failure = votes.filter(CIVote.commit_id == commit_id,
+                                          CIVote.ci_vote == 0).count()
+        repodetail.timestamp = votes.filter(CIVote.commit_id == commit_id).\
+            order_by(desc(CIVote.timestamp)).first().timestamp
+        repolist.append(repodetail)
+
+    repolist = sorted(repolist, key=lambda repo: repo.timestamp, reverse=True)
+
+    return render_template('votes_general.j2',
+                           target='master',
+                           repodetail=repolist)
+
+
+@app.route('/api/civotes_detail.html', methods=['GET'])
+def get_civotes_detail():
+    commit_hash = request.args.get('commit_hash', None)
+    distro_hash = request.args.get('distro_hash', None)
+    success = request.args.get('success', None)
+
+    session = getSession(app.config['DB_PATH'])
+    votes = session.query(CIVote)
+    votes = votes.filter(CIVote.ci_name != 'consistent')
+
+    if commit_hash and distro_hash:
+        commit = session.query(Commit).filter(
+            Commit.status == 'SUCCESS',
+            Commit.commit_hash == commit_hash,
+            Commit.distro_hash == distro_hash).first()
+        votes = votes.filter(CIVote.commit_id == commit.id)
+    else:
+        raise InvalidUsage("Please specify commit_hash and distro_hash as "
+                           "parameters", status_code=400)
+
+    if success is not None:
+        votes = votes.filter(CIVote.ci_vote == bool(strtobool(success)))
+
+    votelist = votes.all()
+
+    for i in range(len(votelist)):
+        commit = getCommits(session, limit=0).filter(
+            Commit.id == votelist[i].commit_id).first()
+        votelist[i].commit_hash = commit.commit_hash
+        votelist[i].distro_hash = commit.distro_hash
+        votelist[i].distro_hash_short = commit.distro_hash[:8]
+
+    return render_template('votes.j2',
+                           target='master',
+                           votes=votelist)
